Add Contact Informarion

--- a/index.html
+++ b/index.html
@@ -62,17 +62,28 @@
     </div>
     <div id="aboutUs" class="container-fluid">
       <div class="row">
-        <div class="col-xs-8 col-xs-offset-4 col-sm-4 col-sm-offset-0">
+        <div class="col-xs-8 col-xs-offset-4 col-sm-offset-1 col-sm-4 col-sm-offset-1">
         <img src="images/you.png" class="img-responsive">
         </div>
-        <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-0">
+        <div class="col-xs-offset-2 col-xs-8 col-xs-offset-2 col-sm-offset-1 col-sm-4 col-sm-offset-1">
           <h2>Shay Bacchus</h2>
           <h3><i>Licensed Esthetician</i></h3>
-          <p>Something about you, about youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout you</p>
-          <p>Maybe more stuff, about youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout youabout you</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at erat ut nibh pharetra sagittis. Nam ut tortor porttitor, tincidunt nulla ut, elementum nisi. Sed vel dignissim tortor. Integer viverra porttitor dolor lacinia sagittis. Phasellus maximus et lorem sed porttitor. Ut ac efficitur nunc, maximus fermentum elit. Suspendisse potenti. Mauris ultrices tempus nisl vitae malesuada. Suspendisse laoreet, orci et iaculis blandit, purus ante malesuada quam, a fringilla arcu neque eu nisi. Maecenas vitae cursus nibh. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
         </div>
       </div>
-
+    </div>
+    <div id="contact" class="container-fluid">
+      <div class="row">
+        <div class="col-md-8">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2876.0404479141525!2d-79.41466561258154!3d43.87571354752011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2ae4b6592801%3A0x38fc6301ac662886!2s815+Major+Mackenzie+Dr+E%2C+Richmond+Hill%2C+ON+L4C+9X2!5e0!3m2!1sen!2sca!4v1485782608264" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <div class="col-md-4">
+        <p>Phone: <b>647-961-3018</b></p>
+        <p>Address: <b>815 Major Mackenize Dr.E</b></p>
+        <p><b>Richmond Hill, Ontario</b></p>
+        <p><a href="mailto:info@sugarmespa.com">info@sugarmespa.com</a></p>
+        </div>
+      </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
