--- a/index.html
+++ b/index.html
@@ -72,16 +72,35 @@
         </div>
       </div>
     </div>
-    <div id="contact" class="container-fluid">
+    <div id="contact" class="container-fluid map">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-offset-2 col-md-6">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2876.0404479141525!2d-79.41466561258154!3d43.87571354752011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2ae4b6592801%3A0x38fc6301ac662886!2s815+Major+Mackenzie+Dr+E%2C+Richmond+Hill%2C+ON+L4C+9X2!5e0!3m2!1sen!2sca!4v1485782608264" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
-        <div class="col-md-4">
-        <p>Phone: <b>647-961-3018</b></p>
-        <p>Address: <b>815 Major Mackenize Dr.E</b></p>
-        <p><b>Richmond Hill, Ontario</b></p>
+        <div class="col-md-2">
+        <h3>Location:</h3>
+        <p>815 Major Mackenize Dr.E</p>
+        <p>Richmond Hill, Ontario</p>
+        <h3>Contact Info:</h3>
+        <p>647-961-3018</p>
         <p><a href="mailto:info@sugarmespa.com">info@sugarmespa.com</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-4">
+            <a href="#"><img src="images/back.png"></a>
+          </div>
+          <div class="col-xs-4">
+            <a href="#"><img src="images/fb.png"></a>
+            <a href="#"><img src="images/tw.png"></a>
+            <a href="#"><img src="images/inst.png"></a>
+          </div>
+          <div class="col-xs-4">
+            <span class="copy"> &copy; 2017 Sugar Me Spa </span>
+          </div>
         </div>
       </div>
     </div>
@@ -89,5 +108,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-  </body>
+    <script src="script.js"></script>
 </html>
