Fix footer for xs

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-xs-4">
-            <a href="#"><img src="images/back.png"></a>
+            <a href="#"><img src="images/back.png" class="goBack"></a>
           </div>
           <div class="col-xs-4">
-            <a href="#"><img src="images/fb.png"></a>
-            <a href="#"><img src="images/tw.png"></a>
-            <a href="#"><img src="images/inst.png"></a>
+            <a href="#"><img src="images/fb.png" class="logos"></a>
+            <a href="#"><img src="images/tw.png" class="logos"></a>
+            <a href="#"><img src="images/inst.png" class="logos"></a>
           </div>
           <div class="col-xs-4">
             <span class="copy"> &copy; 2017 Sugar Me Spa </span>
