--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Courgette|Roboto" rel="stylesheet">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
   </head>
-  <body>
-    <nav class="navbar navbar-custom navbar-fixed-top">
+  <body data-spy="scroll" data-target="#myNavbar">
+    <nav role="navigation" class="navbar navbar-custom navbar-fixed-top" id="myNavbar">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand"><img src="images/logo.png" class="logo"></a>
@@ -28,17 +29,26 @@
         </div>
         <div class="navbar-collapse collapse" id="navbarCollapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#header">Home</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#aboutUs">About us</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
       </div>
     </nav>
     <header>
       <div class="container-fluid" id="header">
-          <h1>Welcome to <br><br><span> Sugar Me Spa </span> </h1>
+        <h1 class="tlt">
+          <ul class="texts">
+            <li>WELCOME TO</li>
+            <li>Experience the art of</li>
+          </ul>
+          <ul class="texts">
+            <li>SUGAR ME SPA</li>
+            <li>all natural hair removal</li>
+          </ul>
+        </h1>
       </div>
     </header>
     <div id="services" class="container-fluid">
@@ -75,7 +85,7 @@
     <div id="contact" class="container-fluid map">
       <div class="row">
         <div class="col-md-offset-2 col-md-6">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2876.0404479141525!2d-79.41466561258154!3d43.87571354752011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2ae4b6592801%3A0x38fc6301ac662886!2s815+Major+Mackenzie+Dr+E%2C+Richmond+Hill%2C+ON+L4C+9X2!5e0!3m2!1sen!2sca!4v1485782608264" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2876.0404479141525!2d-79.41466561258154!3d43.87571354752011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2ae4b6592801%3A0x38fc6301ac662886!2s815+Major+Mackenzie+Dr+E%2C+Richmond+Hill%2C+ON+L4C+9X2!5e0!3m2!1sen!2sca!4v1485782608264" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
         <div class="col-md-2">
         <h3>Location:</h3>
@@ -108,5 +118,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery.textillate.js"></script>
+    <script src="js/jquery.lettering.js"></script>
+    <script src="js/script.js"></script>
+
 </html>
