--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Sugar Me</title>
+    <title>Sugar Me Spa</title>
      <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Fonts -->
@@ -39,16 +39,9 @@
     </nav>
     <header>
       <div class="container-fluid" id="header">
-        <h1 class="tlt">
-          <ul class="texts">
-            <li>WELCOME TO</li>
-            <li>Experience the art of</li>
-          </ul>
-          <ul class="texts">
-            <li>SUGAR ME SPA</li>
-            <li>all natural hair removal</li>
-          </ul>
-        </h1>
+        <h1><span>Sugar Me Spa</span></h1>
+        <h3>Brazilian and Bikini Sugaring</h3>
+        <h5>Experience the art of all natural hair removal</h5>
       </div>
     </header>
     <div id="services" class="container-fluid">
@@ -118,9 +111,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/jquery.textillate.js"></script>
-    <script src="js/jquery.lettering.js"></script>
-    <script src="js/script.js"></script>
 
 </html>
