--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body data-spy="scroll" data-target="#myNavbar">
     <nav role="navigation" class="navbar navbar-custom navbar-fixed-top" id="myNavbar">
-      <div class="container-fluid">
+      <div class="container-fluid strech">
         <div class="navbar-header">
           <a class="navbar-brand"><img src="images/logo.png" class="logo"></a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarCollapse">
