Fix google map API

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="contact" class="container-fluid map">
       <div class="row">
         <div class="col-md-offset-2 col-md-6">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2876.0404479141525!2d-79.41466561258154!3d43.87571354752011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2ae4b6592801%3A0x38fc6301ac662886!2s815+Major+Mackenzie+Dr+E%2C+Richmond+Hill%2C+ON+L4C+9X2!5e0!3m2!1sen!2sca!4v1485782608264" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2876.0404479141525!2d-79.41466561258154!3d43.87571354752011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2ae4b6592801%3A0x38fc6301ac662886!2s815+Major+Mackenzie+Dr+E%2C+Richmond+Hill%2C+ON+L4C+9X2!5e0!3m2!1sen!2sca!4v1485782608264" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
         <div class="col-md-2">
         <h3>Location:</h3>
